landing page and some fixes

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./src/style/bootstrap.min.css">
     <link rel="stylesheet" href="./src/style/normalize.css">
     <link rel="stylesheet" href="./src//style//main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Vite + React</title>
   </head>
   <body>
