--- a/front-end/index.html
+++ b/front-end/index.html
@@ -16,6 +16,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script src="https://kit.fontawesome.com/268076b2ec.js" crossorigin="anonymous"></script> -->
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script src="/src/js/bootstrap.min.js"></script> -->
   </body>
 </html>
