--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./src/style/bootstrap.min.css">
     <link rel="stylesheet" href="./src/style/normalize.css">
     <link rel="stylesheet" href="./src/style/main.css">
+    <link rel="stylesheet" href="./src/style/nprogress.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +17,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script src="https://kit.fontawesome.com/268076b2ec.js" crossorigin="anonymous"></script> -->
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script src="/src/js/nprogress.js"></script> -->
+    <!-- <script src="https://kit.fontawesome.com/268076b2ec.js" crossorigin="anonymous"></script> -->
     <!-- <script src="/src/js/bootstrap.min.js"></script> -->
   </body>
 </html>
